--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,15 @@ environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
   browser: '>=0.10.0 <0.11.0'
-  paper_elements: '>=0.7.0 <0.8.0'
-  polymer: '>=0.16.0 <0.17.0'
   firebase: "^0.5.1"
-  core_elements: 
+  polymer: ">=0.15.1 <0.19.0"
+  core_elements: ">=0.5.0 <0.8.0"
+  paper_elements: ">=0.6.0 <0.8.0"
   message:   
 transformers:
 - polymer:
-    entry_points: web/index.html
+    entry_points:
+    inline_stylesheets:
+      lib/src/paper-shadow/paper-shadow.css: false
+- $dart2js:
+    $include: "**/*.polymer.bootstrap.dart"
